mule-user-guide/v/3.5/enabling-ws-security.adoc
= 启用WS-Security

*_Enterprise_*

当Web服务向外界公开专用网络数据时，该数据将通过4  -  7个独立的协议层（请参阅 link:http://en.wikipedia.org/wiki/TCP/IP_model[TCP / IP]或 link:http://en.wikipedia.org/wiki/OSI_model[OSI]）传播，从而引发潜在的安全漏洞。例如，在协议栈上的较高层实现安全性（例如应用层）通常提供比在较低传输层（仅提供HTTPS安全性）的实现更好的保护。

要实现应用程序层安全性，请在Web服务上启用 link:http://msdn.microsoft.com/en-us/library/ms977327.aspx[WS-安全]（ link:http://cxf.apache.org/[CXF]配置）。 WS-security定义了一个新的SOAP头，它能够携带各种安全令牌，系统用它来标识Web服务调用者的身份和特权，并且可以包含以下内容：

* 加密
* 数字签名
* 时间戳

您还可以将xref：addtokenvalidator [添加自定义令牌验证程序]添加到SOAP组件。

<<Complete Code Example>>

== 启用WS-Security

要在应用程序中的CXF Web服务上启用WS安全性，您必须将WS配置添加到流中的*SOAP Component*。此方法仅在一个Web服务中启用流程中的本地WS安全性。

对于涉及Web服务的Mule流，添加 link:/mule-user-guide/v/3.5/cxf-component-reference[CXF组件]以发布，使用或代理Web服务。完成以下步骤以在SOAP组件上配置WS-security。

[tabs]
------
[tab,title="Studio Visual Editor"]
....

. Search for "cxf" and drag the CXF (SOAP) building block to the canvas.
. Click the *CXF* element to open the properties menu.
. Click the *Security* tab.
+
image:security.png[security]
+
. Click the
image:add.png[(plus)] icon in the *Add Configuration Element* pane to create a new key-value pair.
. Click *cxf:property* key and Enter a key, such as `action`, in the *Key* field and press *Enter*:
+
image:key_value_pair.png[key_value_pair]
+
[NOTE]
====
In XML, this step mirrors the addition of a key-value pair inside the ws-config child element of a ws-security element. By adding configuration elements to your SOAP component, you are creating a map of key-value pairs that correspond to the CXF WSS4J security-configuration text strings in link:http://people.apache.org/~fadushin/stage/wss4j/1.5.5-RETRACTED/site/apidocs/org/apache/ws/security/handler/WSHandlerConstants.html[WSHandlerConstants] and link:http://people.apache.org/~fadushin/stage/wss4j/1.5.5-RETRACTED/site/apidocs/org/apache/ws/security/WSConstants.html[WSConstants].
====
+
. Click the *Value* field and specify a link:http://people.apache.org/~fadushin/stage/wss4j/1.5.5-RETRACTED/site/apidocs/org/apache/ws/security/WSConstants.html[WS Constant ](a class to define the kind of access the server allows) or a link:http://people.apache.org/~fadushin/stage/wss4j/1.5.5-RETRACTED/site/apidocs/org/apache/ws/security/handler/WSHandlerConstants.html[WSHandlerConstant] (a class to specify the names, actions, and other strings for data deployment of the WSS handler). For example, enter `UsernameToken` in the value field.
+
image:open-and-specify-value.png[open-and-specify-value]
+
. Open the *Value Reference* field and specify the bean that the key must reference. When the key must reference a bean (for instance, when the key is `passwordCallbackRef`), enter the name of the bean in the *Value Reference* field.
. Repeat the steps above to add as many ws-security configurations as you wish to your Web service, then click *OK* to save your configurations.

....
[tab,title="Studio XML Editor or Standalone"]
....

. To your CXF element (a SOAP component), add a child element for `cxf:ws-security`.
. Within the `cxf:ws-security` child element, add a child element for `cxf:ws-config`.
. Within the `cxf:ws-config` child element, add a child element for `cxf:property`.
. Add two attributes to the cxf:property child element according to the table below. Be sure to enter either a `value`_OR_ a `value-ref`; the two are mutually exclusive.
+
[%autowidth.spread]
|===
|*key* |Specify a name for the property.
|*value* |Specify a link:http://people.apache.org/~fadushin/stage/wss4j/1.5.5-RETRACTED/site/apidocs/org/apache/ws/security/WSConstants.html[WS Constant ](a class to define the kind of access the server allows) or a link:http://people.apache.org/~fadushin/stage/wss4j/1.5.5-RETRACTED/site/apidocs/org/apache/ws/security/handler/WSHandlerConstants.html[WSHandlerConstant] (a class to specify the names, actions, and other strings for data deployment of the WSS handler). For example, enter `UsernameToken` in the value field.
|*value-ref* |Specify the bean that the key must reference. When the key must reference a bean (for instance, when the key is `passwordCallbackRef`), specify the name of the bean as the value-ref.
|===
+
. Repeat the preceding step to add as many WS-security configurations as you wish to your Web service. Refer to sample code below.
+
*View the Namespace*
+
[source, xml, linenums]
----
<mule xmlns:cxf="http://www.mulesoft.org/schema/mule/cxf" 
... 
xsi:schemaLocation="
http://www.mulesoft.org/schema/mule/cxf http://www.mulesoft.org/schema/mule/cxf/current/mule-cxf.xsd">
----
+
[source, xml, linenums]
----
<flow name="Creation1Flow1" doc:name="Creation1Flow1">
    <http:inbound-endpoint host="localhost" port="8081"/>
    <cxf:jaxws-service doc:name="SOAP">
        <cxf:ws-security>
            <cxf:ws-config>
                <cxf:property key="action" value="UsernameToken"/>
            </cxf:ws-config>
        </cxf:ws-security>
    </cxf:jaxws-service>
</flow>
----

....
------

[[addtokenvalidator]]
== 添加令牌验证器

如果您在Mule的Web服务上启用了WS-Security，则可以进一步配置SOAP组件，以委托对其传输或接收的消息凭证进行身份验证。

SOAP组件可能会陷入处理和验证消息的任务中。要减轻此负载，您可以指示WS安全将某些消息身份验证任务委派给*Token Validator*，其中包括：

* 在`CallbackHandler`实现无法访问密码的情况下验证`UsernameToken`。
* 验证接收到的SAML断言的属性。
* 将接收到的安全令牌分派给第三方安全服务进行验证。

完成以下过程将令牌验证程序添加到Web服务。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
. In the *Security* tab of your SOAP component, click one or more of the check boxes to delegate message authentication tasks to token validators. Refer to the table below for the activity of each token validator.
+
image:token_validators.png[token_validators]
+
[%header,cols="30a,70a"]
|===
|Token Validator |Purpose
|*User Name* |Authenticates the username and password credentials associated with each message in a manner similar to HTTP Digest authentication.
|*{{0}}* |Checks messages against SAML 1.1 assertion statements in order to approve or reject access to the Web service.
|*{{0}}* |Checks messages against SAML 2.0 assertion statements in order to approve or reject access to the Web service.
|*Timestamp* |Examines the timeliness of messages – when they were created and received, and when they expire – to make decisions about which messages to process. The timestamp is in UTC time and is a combination of date and time of day per Chapter 5.4 of ISO 8601, which is known as the dateTime format. See link:https://www.w3.org/TR/xmlschema-2/#dateTime[W3C dateTime] for more information.
|*Signature* |Examines the digital signature attached to messages to make decisions about which messages to process.
|*Binary Security Token* |Examines binary encoded security tokens (such as Kerberos) to make decisions about which messages to process.
|===
+
. In the *Bean* field associated with the token validator you have selected, use the drop-down menu to select an existing bean that your token validator can reference to apply, replace, or extend the default behavior associated with a specific security token.
+
[TIP]
====
If you have not yet created any beans, click the
image:add.png[(plus)] button to open a new properties panel in which you can create and configure a new bean. The bean imports the Java class you have built to specify the custom validator's override behavior.
====
+
image:token_validators_selected.png[token_validators_selected]
+
*Java code for Bean Creation*
+
[source, java, linenums]
----
public class UsernameTokenTestValidator implements Validator
{
 
    @Override
    public Credential validate(Credential credential, RequestData data) throws WSSecurityException
    {
        UsernameToken usernameToken = credential.getUsernametoken();
 
        if(!"secret".equals(usernameToken.getPassword()))
        {
            throw new WSSecurityException(WSSecurityException.FAILED_AUTHENTICATION);
        }
 
        return credential;
    }
}
----
+
. Click *OK* to save changes.

....
[tab,title="Studio XML Editor or Standalone"]
....

. Above all flows in your Mule project, create a global `spring:bean` element to import the Java class you have built to specify the token validator's behavior. Refer to code sample below.
+
*Java code for Bean Creation*
+
[source, java, linenums]
----
public class UsernameTokenTestValidator implements Validator
{
 
    @Override
    public Credential validate(Credential credential, RequestData data) throws WSSecurityException
    {
        UsernameToken usernameToken = credential.getUsernametoken();
 
        if(!"secret".equals(usernameToken.getPassword()))
        {
            throw new WSSecurityException(WSSecurityException.FAILED_AUTHENTICATION);
        }
 
        return credential;
    }
}
----
+
. To the CXF element in your flow, add a child element (below any `cxf:ws-config` elements you may have added) for `cxf:ws-custom-validator`.
. To the `cxf:ws-custom-validator` child element, add a child element according to the type of action you want the validator to perform. Refer to the table below.
+
[%header%autowidth.spread]
|===
|Token Validator |Purpose
|*cxf:username-token-validator* |Authenticates the username and password credentials associated with each message in a manner similar to HTTP Digest authentication.
|*cxf:saml1-token-validator* |Checks messages against link:http://en.wikipedia.org/wiki/SAML_1.1[SAML 1.1] assertion statements in order to approve or reject access to the Web service.
|*cxf:saml2-token-validator* |Checks messages against link:http://en.wikipedia.org/wiki/SAML_2.0[SAML 2.0] assertion statements in order to approve or reject access to the Web service.
|*cxf:timestamp-token-validator* |Examines the timeliness of messages – when they were created and received, and when they expire – to make decisions about which messages to process. The timestamp is in UTC time and is a combination of date and time of day per Chapter 5.4 of ISO 8601, which is known as the dateTime format. See link:https://www.w3.org/TR/xmlschema-2/#dateTime[W3C dateTime] for more information.
|*cxf:signature-token-validator* |Examines the digital signature attached to messages to make decisions about which messages to process.
|*cxf:bst-token-validator* |Examines binary encoded security tokens (such as Kerberos) to make decisions about which messages to process.
|===
+
. Add a `ref` attribute to the validator to reference the global spring:bean element which imports the Java class.
+
*View the Namespace*
+
[source, xml, linenums]
----
<mule xmlns:cxf="http://www.mulesoft.org/schema/mule/cxf" 
... 
xsi:schemaLocation="
http://www.mulesoft.org/schema/mule/cxf http://www.mulesoft.org/schema/mule/cxf/current/mule-cxf.xsd">
----
+
[source, xml, linenums]
----
<spring:beans>
    <spring:bean id="customTokenValidator" name="Bean" class="org.mule.example.myClass"/>
</spring:beans>
     
<flow name="Creation1Flow1" doc:name="Creation1Flow1">
    <http:inbound-endpoint host="localhost" port="8081"/>
    <cxf:jaxws-service doc:name="SOAP">
        <cxf:ws-security>
            <cxf:ws-config>
                <cxf:property key="action" value="UsernameToken"/>
            </cxf:ws-config>
            <cxf:ws-custom-validator>
                <cxf:username-token-validator ref="Bean"/>
            </cxf:ws-custom-validator>
        </cxf:ws-security>
    </cxf:jaxws-service>
</flow>
----

....
------

== 完整的代码示例

=== 查看名称空间

[source, xml, linenums]
----
<mule xmlns:cxf="http://www.mulesoft.org/schema/mule/cxf" 
... 
xsi:schemaLocation="
http://www.mulesoft.org/schema/mule/cxf http://www.mulesoft.org/schema/mule/cxf/current/mule-cxf.xsd">
----

link:http://www.mulesoft.org/schema/mule/cxf/3.5/mule-cxf.xsd[查看Mule 3.5 CXF模式]。

=== 查看示例代码

[source, xml, linenums]
----
<spring:beans>
        <spring:bean id="Bean" name="samlCustomValidator" class="com.mulesoft.mule.example.security.SAMLCustomValidator"/>
    </spring:beans>
 
    <flow name="UnsecureServiceFlow" doc:name="UnsecureServiceFlow">
        <http:inbound-endpoint host="localhost" port="63081" path="services/unsecure" />
 <cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Unsecure service"/>
        <component class="com.mulesoft.mule.example.security.GreeterService" doc:name="Greeter Service" />
    </flow>
 
    <flow name="UsernameTokenServiceFlow" doc:name="UsernameTokenServiceFlow">
        <http:inbound-endpoint host="localhost" port="63081" path="services/username" />
 <cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Secure UsernameToken service">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="UsernameToken Timestamp"/>
                    <cxf:property key="passwordCallbackClass" value="com.mulesoft.mule.example.security.PasswordCallback"/>
                </cxf:ws-config>
            </cxf:ws-security>
        </cxf:jaxws-service>
        <component class="com.mulesoft.mule.example.security.GreeterService" doc:name="Greeter Service"/>
    </flow>
 
    <flow name="UsernameTokenSignedServiceFlow" doc:name="UsernameTokenSignedServiceFlow">
        <http:inbound-endpoint host="localhost" port="63081" path="services/signed" />
        <cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Secure UsernameToken Signed service">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="UsernameToken Signature Timestamp"/>
                    <cxf:property key="signaturePropFile" value="wssecurity.properties"/>
                    <cxf:property key="passwordCallbackClass" value="com.mulesoft.mule.example.security.PasswordCallback"/>
                </cxf:ws-config>
            </cxf:ws-security>
        </cxf:jaxws-service>
        <component class="com.mulesoft.mule.example.security.GreeterService" doc:name="Greeter Service"/>
    </flow>
 
    <flow name="UsernameTokenEncryptedServiceFlow" doc:name="UsernameTokenEncryptedServiceFlow">
        <http:inbound-endpoint host="localhost" port="63081" path="services/encrypted" />
        <cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Secure UsernameToken Encrypted service">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="UsernameToken Timestamp Encrypt"/>
                    <cxf:property key="decryptionPropFile" value="wssecurity.properties"/>
                    <cxf:property key="passwordCallbackClass" value="com.mulesoft.mule.example.security.PasswordCallback"/>
                </cxf:ws-config>
            </cxf:ws-security>
        </cxf:jaxws-service>
        <component class="com.mulesoft.mule.example.security.GreeterService" doc:name="Greeter Service"/>
    </flow>
 
    <flow name="SamlTokenServiceFlow" doc:name="SamlTokenServiceFlow">
        <http:inbound-endpoint host="localhost" port="63081" path="services/saml" />
        <cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Secure SAMLToken service">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="SAMLTokenUnsigned Timestamp"/>
                </cxf:ws-config>
                <cxf:ws-custom-validator>
                    <cxf:saml2-token-validator ref="samlCustomValidator"/>
                </cxf:ws-custom-validator>
            </cxf:ws-security>
        </cxf:jaxws-service>
        <component class="com.mulesoft.mule.example.security.GreeterService" doc:name="Greeter Service"/>
    </flow>
 
    <flow name="SignedSamlTokenServiceFlow" doc:name="SignedSamlTokenServiceFlow">
        <http:inbound-endpoint host="localhost" port="63081" path="services/signedsaml" />
        <cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Secure SAMLToken Signed service">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="SAMLTokenUnsigned Signature"/>
                    <cxf:property key="signaturePropFile" value="wssecurity.properties" />
                </cxf:ws-config>
                <cxf:ws-custom-validator>
                    <cxf:saml2-token-validator ref="samlCustomValidator"/>
                </cxf:ws-custom-validator>
            </cxf:ws-security>
        </cxf:jaxws-service>
        <component class="com.mulesoft.mule.example.security.GreeterService" doc:name="Greeter Service"/>
    </flow>
----

== 另请参阅

* 详细了解如何在Mule应用程序中配置 link:/mule-user-guide/v/3.5/cxf-component-reference[CXF组件]。
* 查看演示使用WS安全性的 link:/mule-user-guide/v/3.5/soap-web-service-security-example[骡示例应用程序]。
* 查看演示SOAP Web服务的 link:/mule-user-guide/v/3.5/xml-only-soap-web-service-example[骡示例应用程序]。



